Fixed alignment on mobile

--- a/style.css
+++ b/style.css
@@ -163,10 +163,16 @@ h1 {
 	font-weight: 200;
 }
 
+.otherButtonWrapper {
+	margin: 15px 0;
+	display: block;
+	text-align: center;
+}
+
 .otherButton {
 	cursor: pointer;
-	margin: 15px auto;
-	display: block;
+	/*margin: 15px auto;*/
+	display: inline-block;
 	border: 0px;
 	box-shadow:inset 0px -2px 0px 0px #327794;
 	background-color:#2aaae1;
